fix(front): i#3919 spacing text editor

--- a/javascript/apps/taiga/src/app/styles/tools/editor-results.css
+++ b/javascript/apps/taiga/src/app/styles/tools/editor-results.css
@@ -22,12 +22,18 @@ Copyright (c) 2023-present Kaleidos INC
 
   & ul {
     list-style-type: square;
-    margin-block-end: var(--spacing-8);
+    margin-block-end: 0;
+    margin-block-start: var(--spacing-12);
+  }
+
+  & li {
+    margin-block-end: 0;
+    margin-block-start: var(--spacing-4);
   }
 
   & p {
-    margin-block-end: 0.5rem;
-    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-block-start: var(--spacing-12);
   }
 
   & hr {
@@ -40,6 +46,16 @@ Copyright (c) 2023-present Kaleidos INC
     text-decoration: underline;
   }
 
+  & p:first-child,
+  & h1:first-child,
+  & h2:first-child,
+  & h3:first-child,
+  & h4:first-child,
+  & h5:first-child,
+  & h6:first-child {
+    margin-block-start: 0;
+  }
+
   & h1,
   & h2,
   & h3,
@@ -47,7 +63,12 @@ Copyright (c) 2023-present Kaleidos INC
   & h5,
   & h6 {
     font-family: "Ubuntu", sans-serif;
-    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-block-start: var(--spacing-24);
+  }
+
+  h6 {
+    margin-block-start: var(--spacing-16);
   }
 
   & pre,
@@ -63,11 +84,11 @@ Copyright (c) 2023-present Kaleidos INC
   & ol {
     display: block;
     list-style-type: decimal;
-    margin-block-end: 1em;
-    margin-block-start: 1em;
+    margin-block-end: 0;
+    margin-block-start: var(--spacing-12);
     margin-inline-end: 0;
     margin-inline-start: 0;
-    padding-inline-start: 40px;
+    padding-inline-start: 1.4rem;
   }
 }
 
